--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "keywords": [],
   "description": ""
 }
